removed svg functionality from locations and added pdf objects instead

--- a/wp-content/themes/texsite/sass/navigation/_menus.scss
+++ b/wp-content/themes/texsite/sass/navigation/_menus.scss
@@ -87,17 +87,16 @@ span.icon-bar {
 	}
 }
 
-/* Small menu. */
-.menu-toggle,
-.main-navigation.toggled ul {
+/* Small menu. bootstrap custom */
+.navbar-toggle {
 	display: block;
 }
 
 @media screen and (min-width: 37.5em) {
-	.menu-toggle {
+	.navbar-toggle {
 		display: none;
 	}
-	.main-navigation ul {
+	.main-nav ul {
 		display: block;
 	}
 }
