--- a/wp-content/themes/texsite/sass/site/_site.scss
+++ b/wp-content/themes/texsite/sass/site/_site.scss
@@ -45,3 +45,13 @@
 ## about page
 --------------------------------------------------------------*/
 @import "about/about";
+
+/*--------------------------------------------------------------
+## franchising page
+--------------------------------------------------------------*/
+@import "franchising/franchising";
+
+/*--------------------------------------------------------------
+## texnation page
+--------------------------------------------------------------*/
+@import "texNation/texNation";
