--- a/wp-content/themes/texsite/sass/site/header/_header.scss
+++ b/wp-content/themes/texsite/sass/site/header/_header.scss
@@ -82,6 +82,15 @@
 .red-bar {
   background: $color__background-bar;
   height: 4vh;
+
+
+  padding-left: 2em;
+
+  a {
+    margin-right: 2em;
+    font-size: 1.5em;
+    color: #FFFFFF;
+  }
 }
 
 .grey-bar {
