--- a/wp-content/themes/texsite/style.css
+++ b/wp-content/themes/texsite/style.css
@@ -592,16 +592,17 @@ span.icon-bar {
 	text-decoration: none;
 }
 
-/* Small menu. bootstrap custom */
-.navbar-toggle {
+/* Small menu. */
+.menu-toggle,
+.main-navigation.toggled ul {
 	display: block;
 }
 
 @media screen and (min-width: 37.5em) {
-	.navbar-toggle {
+	.menu-toggle {
 		display: none;
 	}
-	.main-nav ul {
+	.main-navigation ul {
 		display: block;
 	}
 }
@@ -810,6 +811,13 @@ span.icon-bar {
 .red-bar {
 	background: #c80000;
 	height: 4vh;
+	padding-left: 2em;
+}
+
+.red-bar a {
+	margin-right: 2em;
+	font-size: 1.5em;
+	color: #FFFFFF;
 }
 
 .grey-bar {
@@ -1060,13 +1068,12 @@ span.icon-bar {
 	padding-right: 2em;
 }
 
-.modal-lg object {
-	height: 77vh;
-}
-
 @media screen and (min-width: 768px) {
 	.modal-lg {
 		width: 90vw;
+	}
+	.modal-lg object {
+		height: 77vh;
 	}
 }
 
@@ -1207,6 +1214,175 @@ span.icon-bar {
 
 .about-bottom img {
 	width: 100%;
+}
+
+/*--------------------------------------------------------------
+## franchising page
+--------------------------------------------------------------*/
+.franchising-text h1, .franchising-text h2 {
+	text-align: center;
+}
+
+.franchising-text h2 {
+	font-size: 2em;
+}
+
+/*--------------------------------------------------------------
+## texnation page
+--------------------------------------------------------------*/
+#bg-app {
+	position: fixed;
+	top: 0;
+	left: 0;
+	/* Preserve aspet ratio */
+	min-width: 100%;
+	min-height: 100%;
+	z-index: -1000;
+}
+
+.app-titles {
+	/* small screen */
+	/* medium screen */
+	/* large screen */
+}
+
+@media screen and (max-width: 767px) {
+	.app-titles {
+		/*max-width: 250px;*/
+	}
+	.app-titles .brown-layer {
+		top: 5em;
+	}
+	.app-titles .blank-bar {
+		height: 0;
+	}
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+	.app-titles {
+		/*max-width: 500px;*/
+	}
+}
+
+@media screen and (min-width: 1024px) and (max-width: 1079px) {
+	.app-titles {
+		/* max-width: 700px;*/
+	}
+}
+
+.app-content {
+	/* small screen */
+	/* medium screen */
+	/* large screen */
+}
+
+.app-content li {
+	color: #4e170d;
+	font-size: 2em;
+}
+
+.app-content li:before {
+	content: '* ';
+}
+
+.app-content h1 {
+	font-family: "chunk", serif;
+	color: #4e170d;
+}
+
+@media screen and (max-width: 767px) {
+	.app-content {
+		/*max-width: 250px;*/
+	}
+	.app-content h1 {
+		font-size: 1em;
+	}
+	.app-content li {
+		font-size: 1em;
+	}
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+	.app-content {
+		/*max-width: 500px;*/
+	}
+}
+
+@media screen and (min-width: 1024px) and (max-width: 1079px) {
+	.app-content {
+		/* max-width: 700px;*/
+	}
+}
+
+.text-bar {
+	position: absolute;
+	left: 0;
+	top: 2em;
+	width: 100%;
+	padding-left: 2em;
+	font-size: 2em;
+	color: #FFFFFF;
+	/*text-align: center;*/
+	/* small screen */
+	/* medium screen */
+	/* large screen */
+}
+
+@media screen and (max-width: 767px) {
+	.text-bar {
+		/*max-width: 250px;*/
+		font-size: .8em;
+		top: 1em;
+	}
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+	.text-bar {
+		/*max-width: 500px;*/
+	}
+}
+
+@media screen and (min-width: 1024px) and (max-width: 1079px) {
+	.text-bar {
+		/* max-width: 700px;*/
+	}
+}
+
+.title-top {
+	top: 10vh;
+}
+
+.title {
+	top: 40vh;
+}
+
+.brown-layer {
+	position: absolute;
+	top: 0px;
+	z-index: -500;
+	width: 100%;
+}
+
+.blank-bar {
+	height: 5vh;
+}
+
+ul {
+	list-style: none;
+}
+
+#masthead {
+	background: #FFFFFF;
+}
+
+.center-app img {
+	display: block;
+	margin: auto;
+	width: 40%;
+}
+
+.blank-bar-app {
+	height: 2vh;
 }
 
 /*--------------------------------------------------------------
