--- a/wp-content/themes/texsite/sass/site/texNation/_texNation.scss
+++ b/wp-content/themes/texsite/sass/site/texNation/_texNation.scss
@@ -9,6 +9,13 @@
 }
 
 .app-titles {
+  .brown-layer {
+    position: absolute;
+    top: 0px;
+    z-index: -500;
+    width: 100%;
+  }
+
   /* small screen */
   @media screen and (max-width: 767px) {
     /*max-width: 250px;*/
@@ -24,7 +31,9 @@
 
   /* medium screen */
   @media screen and (min-width: 768px) and (max-width: 1023px) {
-    /*max-width: 500px;*/
+    .brown-layer {
+      top: 13em;
+    }
   }
 
   /* large screen */
@@ -50,6 +59,9 @@
     /*max-width: 250px;*/
     h1 {
       font-size: 1em;
+    }
+    ul {
+      padding: 0;
     }
     li {
       font-size: 1em;
@@ -79,20 +91,35 @@
   /*text-align: center;*/
 
   /* small screen */
-  @media screen and (max-width: 767px) {
+  @media screen and (max-width: 360px) {
     /*max-width: 250px;*/
-    font-size: .8em;
-    top: 1em;
+    font-size: .7em;
+    top: .9em;
+    padding-left: 1.3em;
   }
 
   /* medium screen */
-  @media screen and (min-width: 768px) and (max-width: 1023px) {
+  @media screen and (min-width: 361px) and (max-width: 500px) {
     /*max-width: 500px;*/
+    font-size: .9em;
+    top: .9em;
+    padding-left: 1.3em;
   }
 
   /* large screen */
-  @media screen and (min-width: 1024px) and (max-width: 1079px) {
+  @media screen and (min-width: 501px) and (max-width: 991px) {
     /* max-width: 700px;*/
+    font-size: 1.7em;
+    top: .9em;
+    padding-left: 1.3em;
+  }
+
+  /* extra large screen */
+  @media screen and (min-width: 992px){
+    max-width: 700px;
+    font-size: 2.5em;
+    top: 1.3em;
+    padding-left: 1.3em;
   }
 }
 
@@ -102,13 +129,6 @@
 
 .title {
   top: 40vh;
-}
-
-.brown-layer {
-  position: absolute;
-  top: 0px;
-  z-index: -500;
-  width: 100%;
 }
 
 .blank-bar {
