--- a/wp-content/themes/texsite/style.css
+++ b/wp-content/themes/texsite/style.css
@@ -868,7 +868,7 @@ span.icon-bar {
 
 @media screen and (max-width: 767px) {
 	.custom-logo-link {
-		max-width: 250px;
+		max-width: 200px;
 	}
 }
 
@@ -1246,6 +1246,13 @@ span.icon-bar {
 	/* large screen */
 }
 
+.app-titles .brown-layer {
+	position: absolute;
+	top: 0px;
+	z-index: -500;
+	width: 100%;
+}
+
 @media screen and (max-width: 767px) {
 	.app-titles {
 		/*max-width: 250px;*/
@@ -1259,8 +1266,8 @@ span.icon-bar {
 }
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
-	.app-titles {
-		/*max-width: 500px;*/
+	.app-titles .brown-layer {
+		top: 13em;
 	}
 }
 
@@ -1297,6 +1304,9 @@ span.icon-bar {
 	.app-content h1 {
 		font-size: 1em;
 	}
+	.app-content ul {
+		padding: 0;
+	}
 	.app-content li {
 		font-size: 1em;
 	}
@@ -1326,25 +1336,42 @@ span.icon-bar {
 	/* small screen */
 	/* medium screen */
 	/* large screen */
+	/* extra large screen */
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 360px) {
 	.text-bar {
 		/*max-width: 250px;*/
-		font-size: .8em;
-		top: 1em;
+		font-size: .7em;
+		top: .9em;
+		padding-left: 1.3em;
 	}
 }
 
-@media screen and (min-width: 768px) and (max-width: 1023px) {
+@media screen and (min-width: 361px) and (max-width: 500px) {
 	.text-bar {
 		/*max-width: 500px;*/
+		font-size: .9em;
+		top: .9em;
+		padding-left: 1.3em;
 	}
 }
 
-@media screen and (min-width: 1024px) and (max-width: 1079px) {
+@media screen and (min-width: 501px) and (max-width: 991px) {
 	.text-bar {
 		/* max-width: 700px;*/
+		font-size: 1.7em;
+		top: .9em;
+		padding-left: 1.3em;
+	}
+}
+
+@media screen and (min-width: 992px) {
+	.text-bar {
+		max-width: 700px;
+		font-size: 2.5em;
+		top: 1.3em;
+		padding-left: 1.3em;
 	}
 }
 
@@ -1354,13 +1381,6 @@ span.icon-bar {
 
 .title {
 	top: 40vh;
-}
-
-.brown-layer {
-	position: absolute;
-	top: 0px;
-	z-index: -500;
-	width: 100%;
 }
 
 .blank-bar {
