added widget to texnation

--- a/wp-content/themes/texsite/sass/site/texNation/_texNation.scss
+++ b/wp-content/themes/texsite/sass/site/texNation/_texNation.scss
@@ -21,11 +21,11 @@
     /*max-width: 250px;*/
 
     .brown-layer {
-      top: 5em;
+      top: 6em;
     }
 
-    .blank-bar {
-      height: 0;
+    .blank-bar-app {
+      height: 1em;
     }
   }
 
