--- a/wp-content/themes/texsite/sass/site/header/_header.scss
+++ b/wp-content/themes/texsite/sass/site/header/_header.scss
@@ -1,17 +1,3 @@
-
-.center {
-  line-height: 200px;
-  height: 200px;
-  border: 3px solid green;
-  text-align: center;
-}
-
-.center p {
-  line-height: 1.5;
-  display: inline-block;
-  vertical-align: middle;
-}
-
 //slider
 .slider-caption {
   position: absolute;
@@ -25,6 +11,87 @@
   text-align: center;
   text-shadow: 0 1px 2px rgba(0,0,0,.6);
 }
+
+.red-bar {
+  background: $color__background-bar;
+  height: 4vh;
+
+
+  padding-left: 2em;
+
+  a {
+    margin-right: 2em;
+    font-size: 1.5em;
+    color: #FFFFFF;
+  }
+}
+
+.our-title {
+  text-align: center;
+}
+
+.our-text {
+  position: relative;
+  overflow: auto;
+  padding-left: 2vw;
+}
+
+.text-box {
+  position: absolute;
+  opacity: 0.9;
+  top: 1px;
+}
+
+/* small screen */
+@media screen and (max-width: 360px) {
+
+  .slider-caption {
+    bottom: -2em;
+  }
+
+  .carousel-indicators {
+    display: none;
+  }
+
+  .red-bar {
+    text-align: center;
+
+    a {
+      font-size: 1.2em;
+    }
+  }
+
+  .our-title {
+    font-size: 1em;
+  }
+
+  .text-box {
+    h3 {
+      font-size: .9em;
+      margin: 3px;
+      font-weight: 700;
+    }
+    p {
+      font-size: .7em;
+    }
+  }
+}
+
+/* medium screen */
+@media screen and (min-width: 361px) and (max-width: 500px) {
+
+}
+
+/* large screen */
+@media screen and (min-width: 501px) and (max-width: 991px) {
+
+}
+
+/* extra large screen */
+@media screen and (min-width: 992px){
+
+}
+
 //end slider
 
 //our story
@@ -45,54 +112,6 @@
   }
 }
 
-.text-box {
-  position: absolute;
-  opacity: 0.9;
-  top: 1px;
-
-
-  h3 {
-    font-size: 1.8em;
-    margin: 7px 0;
-  }
-
-  p {
-    margin: 0;
-  }
-
-  @media screen and (max-width: 767px) {
-    @include font-size(.4);
-    h3 {
-      font-size: 1em;
-      font-weight: 700;
-    }
-    width: 100%;
-  }
-
-  @media screen and (max-width: 1580px) and (min-width: 768px) {
-    @include font-size(.7);
-    h3 {
-      font-size: 1.6em;
-    }
-    width: 100%;
-  }
-
-}
-
-.red-bar {
-  background: $color__background-bar;
-  height: 4vh;
-
-
-  padding-left: 2em;
-
-  a {
-    margin-right: 2em;
-    font-size: 1.5em;
-    color: #FFFFFF;
-  }
-}
-
 .grey-bar {
   background: $color__background-hr;
   height: 1vh;
@@ -102,21 +121,5 @@
   height: 5vh;
 }
 
-.our-title {
-  text-align: center;
-  @media screen and (max-width: 767px) {
-    font-size: 1.6em;
-  }
-  @media screen and (max-width: 992px) and (min-width: 768px) {
-    font-size: 1.9em;
-  }
-}
-
-.our-text {
-  position: relative;
-  overflow: auto;
-
-  padding-left: 2vw;
-}
-
 //end our story
+
