--- a/wp-content/themes/texsite/style.css
+++ b/wp-content/themes/texsite/style.css
@@ -729,19 +729,6 @@ span.icon-bar {
 /*--------------------------------------------------------------
 ## Header
 --------------------------------------------------------------*/
-.center {
-	line-height: 200px;
-	height: 200px;
-	border: 3px solid green;
-	text-align: center;
-}
-
-.center p {
-	line-height: 1.5;
-	display: inline-block;
-	vertical-align: middle;
-}
-
 .slider-caption {
 	position: absolute;
 	bottom: 20px;
@@ -754,6 +741,64 @@ span.icon-bar {
 	text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6);
 }
 
+.red-bar {
+	background: #c80000;
+	height: 4vh;
+	padding-left: 2em;
+}
+
+.red-bar a {
+	margin-right: 2em;
+	font-size: 1.5em;
+	color: #FFFFFF;
+}
+
+.our-title {
+	text-align: center;
+}
+
+.our-text {
+	position: relative;
+	overflow: auto;
+	padding-left: 2vw;
+}
+
+.text-box {
+	position: absolute;
+	opacity: 0.9;
+	top: 1px;
+}
+
+/* small screen */
+@media screen and (max-width: 360px) {
+	.slider-caption {
+		bottom: -2em;
+	}
+	.carousel-indicators {
+		display: none;
+	}
+	.red-bar {
+		text-align: center;
+	}
+	.red-bar a {
+		font-size: 1.2em;
+	}
+	.our-title {
+		font-size: 1em;
+	}
+	.text-box h3 {
+		font-size: .9em;
+		margin: 3px;
+		font-weight: 700;
+	}
+	.text-box p {
+		font-size: .7em;
+	}
+}
+
+/* medium screen */
+/* large screen */
+/* extra large screen */
 .large-screen, .medium-screen {
 	display: none;
 }
@@ -770,56 +815,6 @@ span.icon-bar {
 	}
 }
 
-.text-box {
-	position: absolute;
-	opacity: 0.9;
-	top: 1px;
-}
-
-.text-box h3 {
-	font-size: 1.8em;
-	margin: 7px 0;
-}
-
-.text-box p {
-	margin: 0;
-}
-
-@media screen and (max-width: 767px) {
-	.text-box {
-		font-size: 8px;
-		font-size: 0.8rem;
-		width: 100%;
-	}
-	.text-box h3 {
-		font-size: 1em;
-		font-weight: 700;
-	}
-}
-
-@media screen and (max-width: 1580px) and (min-width: 768px) {
-	.text-box {
-		font-size: 14px;
-		font-size: 1.4rem;
-		width: 100%;
-	}
-	.text-box h3 {
-		font-size: 1.6em;
-	}
-}
-
-.red-bar {
-	background: #c80000;
-	height: 4vh;
-	padding-left: 2em;
-}
-
-.red-bar a {
-	margin-right: 2em;
-	font-size: 1.5em;
-	color: #FFFFFF;
-}
-
 .grey-bar {
 	background: #ccc;
 	height: 1vh;
@@ -827,28 +822,6 @@ span.icon-bar {
 
 .blank-bar {
 	height: 5vh;
-}
-
-.our-title {
-	text-align: center;
-}
-
-@media screen and (max-width: 767px) {
-	.our-title {
-		font-size: 1.6em;
-	}
-}
-
-@media screen and (max-width: 992px) and (min-width: 768px) {
-	.our-title {
-		font-size: 1.9em;
-	}
-}
-
-.our-text {
-	position: relative;
-	overflow: auto;
-	padding-left: 2vw;
 }
 
 /*--------------------------------------------------------------
