--- a/wp-content/themes/texsite/sass/site/header/_header.scss
+++ b/wp-content/themes/texsite/sass/site/header/_header.scss
@@ -37,7 +37,7 @@
     margin: 0;
   }
 
-  .small-screen, .medium-screen, .large-screen, .extra-large-screen {
+  .extra-small-screen, .small-screen, .medium-screen, .large-screen, .extra-large-screen {
     display: none;
   }
 
@@ -48,19 +48,19 @@
   }
 
   .medium-screen {
-    @media screen and (min-width: 768px) {
+    @media screen and (min-width: 361px) and (max-width: 500px) {
       display: inline-block;
     }
   }
 
   .large-screen {
-    @media screen and (min-width: 1024px) {
+    @media screen and (min-width: 501px) and (max-width: 600px) {
       display: inline-block;
     }
   }
 
   .extra-large-screen {
-    @media screen and (min-width: 1024px) {
+    @media screen and (min-width: 601px) {
       display: inline-block;
     }
   }
@@ -110,16 +110,80 @@
 /* medium screen */
 @media screen and (min-width: 361px) and (max-width: 500px) {
 
+  .slider-caption {
+    bottom: -2.5em;
+  }
+
+  .carousel-indicators {
+    display: none;
+  }
+
+  .red-bar {
+    text-align: center;
+
+    a {
+      font-size: 1.2em;
+    }
+  }
+
+  .our-title {
+    font-size: 1.4em;
+  }
+
+  .text-box {
+    h3 {
+      font-size: .9em;
+      font-weight: 700;
+      margin-top: 5px;
+    }
+    p {
+      font-size: .7em;
+    }
+    span.medium-screen {
+      margin-top: 5px;
+    }
+  }
 }
 
 /* large screen */
-@media screen and (min-width: 501px) and (max-width: 991px) {
+@media screen and (min-width: 501px) and (max-width: 600px) {
+  .slider-caption {
+    bottom: -2.5em;
+  }
 
+  .carousel-indicators {
+    display: none;
+  }
+
+  .red-bar {
+    text-align: center;
+
+    a {
+      font-size: 1.2em;
+    }
+  }
+
+  .our-title {
+    font-size: 1.9em;
+  }
+
+  .text-box {
+    h3 {
+      font-size: 1em;
+      font-weight: 700;
+      margin-top: 5px;
+    }
+    p {
+      font-size: .8em;
+    }
+  }
 }
 
 /* extra large screen */
-@media screen and (min-width: 992px) {
-
+@media screen and (min-width: 600px) {
+  .small-screen, .medium-screen, .large-screen, .extra-large-screen {
+    display: inline-block;
+  }
 }
 
 //end slider
