--- a/wp-content/themes/texsite/style.css
+++ b/wp-content/themes/texsite/style.css
@@ -767,7 +767,7 @@ span.icon-bar {
 	margin: 0;
 }
 
-.our-text .small-screen, .our-text .medium-screen, .our-text .large-screen, .our-text .extra-large-screen {
+.our-text .extra-small-screen, .our-text .small-screen, .our-text .medium-screen, .our-text .large-screen, .our-text .extra-large-screen {
 	display: none;
 }
 
@@ -777,19 +777,19 @@ span.icon-bar {
 	}
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 361px) and (max-width: 500px) {
 	.our-text .medium-screen {
 		display: inline-block;
 	}
 }
 
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 501px) and (max-width: 600px) {
 	.our-text .large-screen {
 		display: inline-block;
 	}
 }
 
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 601px) {
 	.our-text .extra-large-screen {
 		display: inline-block;
 	}
@@ -828,8 +828,69 @@ span.icon-bar {
 }
 
 /* medium screen */
+@media screen and (min-width: 361px) and (max-width: 500px) {
+	.slider-caption {
+		bottom: -2.5em;
+	}
+	.carousel-indicators {
+		display: none;
+	}
+	.red-bar {
+		text-align: center;
+	}
+	.red-bar a {
+		font-size: 1.2em;
+	}
+	.our-title {
+		font-size: 1.4em;
+	}
+	.text-box h3 {
+		font-size: .9em;
+		font-weight: 700;
+		margin-top: 5px;
+	}
+	.text-box p {
+		font-size: .7em;
+	}
+	.text-box span.medium-screen {
+		margin-top: 5px;
+	}
+}
+
 /* large screen */
+@media screen and (min-width: 501px) and (max-width: 600px) {
+	.slider-caption {
+		bottom: -2.5em;
+	}
+	.carousel-indicators {
+		display: none;
+	}
+	.red-bar {
+		text-align: center;
+	}
+	.red-bar a {
+		font-size: 1.2em;
+	}
+	.our-title {
+		font-size: 1.9em;
+	}
+	.text-box h3 {
+		font-size: 1em;
+		font-weight: 700;
+		margin-top: 5px;
+	}
+	.text-box p {
+		font-size: .8em;
+	}
+}
+
 /* extra large screen */
+@media screen and (min-width: 600px) {
+	.small-screen, .medium-screen, .large-screen, .extra-large-screen {
+		display: inline-block;
+	}
+}
+
 .grey-bar {
 	background: #ccc;
 	height: 1vh;
