front page responsive with percentage

--- a/wp-content/themes/texsite/sass/site/header/_header.scss
+++ b/wp-content/themes/texsite/sass/site/header/_header.scss
@@ -31,13 +31,14 @@
 
 .our-text {
   position: relative;
-  overflow: auto;
-  padding-left: 2vw;
+  overflow-y: hidden;
+  overflow-x: hidden;
+  /*padding-left: 2vw;*/
   p {
     margin: 0;
   }
 
-  .extra-small-screen, .small-screen, .medium-screen, .large-screen, .extra-large-screen {
+  .small-screen, .medium-screen, .large-screen, .extra-large-screen, .desktop {
     display: none;
   }
 
@@ -60,8 +61,15 @@
   }
 
   .extra-large-screen {
-    @media screen and (min-width: 601px) {
+    @media screen and (min-width: 601px) and (max-width: 1024px) {
       display: inline-block;
+      width: 100%;
+    }
+  }
+  .desktop {
+    @media screen and (min-width: 1025px) {
+      display: inline-block;
+      width: 100%;
     }
   }
 
@@ -71,6 +79,9 @@
   position: absolute;
   opacity: 0.9;
   top: 1em;
+  h3 {
+    margin-top: 0;
+  }
 }
 
 /* small screen */
@@ -93,22 +104,22 @@
   }
 
   .our-title {
-    font-size: 1em;
+    font-size: 3vh;
   }
 
   .text-box {
     h3 {
-      font-size: .9em;
+      font-size: 121%;
       font-weight: 700;
     }
     p {
-      font-size: .7em;
+      font-size: 90%;
     }
   }
 }
 
 /* medium screen */
-@media screen and (min-width: 361px) and (max-width: 500px) {
+@media screen and (min-width: 361px) and (max-width: 400px) {
 
   .slider-caption {
     bottom: -2.5em;
@@ -127,26 +138,22 @@
   }
 
   .our-title {
-    font-size: 1.4em;
+    font-size: 3vh;
   }
 
   .text-box {
     h3 {
-      font-size: .9em;
+      font-size: 121%;
       font-weight: 700;
-      margin-top: 5px;
     }
     p {
-      font-size: .7em;
-    }
-    span.medium-screen {
-      margin-top: 5px;
+      font-size: 69%;
     }
   }
 }
 
 /* large screen */
-@media screen and (min-width: 501px) and (max-width: 600px) {
+@media screen and (min-width: 400px) and (max-width: 600px) {
   .slider-caption {
     bottom: -2.5em;
   }
@@ -164,28 +171,63 @@
   }
 
   .our-title {
-    font-size: 1.9em;
+    font-size: 3.5vh;
   }
 
   .text-box {
     h3 {
-      font-size: 1em;
+      font-size: 121%;
       font-weight: 700;
-      margin-top: 5px;
     }
     p {
-      font-size: .8em;
+      font-size: 78%;
     }
   }
 }
 
 /* extra large screen */
-@media screen and (min-width: 600px) {
-  .small-screen, .medium-screen, .large-screen, .extra-large-screen {
-    display: inline-block;
+@media screen and (min-width: 601px) and (max-width: 1020px) {
+
+  .red-bar {
+    a {
+      font-size: 1.2em;
+    }
+  }
+
+  .our-title {
+    font-size: 4vh;
+  }
+
+  .text-box {
+    h3 {
+      font-size: 150%;
+      font-weight: 700;
+    }
+    p {
+      font-size: 93%;
+    }
   }
 }
+/* desktop */
+@media screen and (min-width: 1021px) {
+  .our-text {
+    overflow-y: auto;
+    background: #e4e9f5;
+  }
 
+  .our-title {
+    font-size: 8vh;
+  }
+  .text-box {
+    h3 {
+      font-size: 4vmin;
+      font-weight: 700;
+    }
+    p {
+      font-size: 2.3vmin;
+    }
+  }
+}
 //end slider
 
 //our story
