--- a/wp-content/themes/texsite/style.css
+++ b/wp-content/themes/texsite/style.css
@@ -759,15 +759,16 @@ span.icon-bar {
 
 .our-text {
 	position: relative;
-	overflow: auto;
-	padding-left: 2vw;
+	overflow-y: hidden;
+	overflow-x: hidden;
+	/*padding-left: 2vw;*/
 }
 
 .our-text p {
 	margin: 0;
 }
 
-.our-text .extra-small-screen, .our-text .small-screen, .our-text .medium-screen, .our-text .large-screen, .our-text .extra-large-screen {
+.our-text .small-screen, .our-text .medium-screen, .our-text .large-screen, .our-text .extra-large-screen, .our-text .desktop {
 	display: none;
 }
 
@@ -789,9 +790,17 @@ span.icon-bar {
 	}
 }
 
-@media screen and (min-width: 601px) {
+@media screen and (min-width: 601px) and (max-width: 1024px) {
 	.our-text .extra-large-screen {
 		display: inline-block;
+		width: 100%;
+	}
+}
+
+@media screen and (min-width: 1025px) {
+	.our-text .desktop {
+		display: inline-block;
+		width: 100%;
 	}
 }
 
@@ -799,6 +808,10 @@ span.icon-bar {
 	position: absolute;
 	opacity: 0.9;
 	top: 1em;
+}
+
+.text-box h3 {
+	margin-top: 0;
 }
 
 /* small screen */
@@ -816,19 +829,19 @@ span.icon-bar {
 		font-size: 1.2em;
 	}
 	.our-title {
-		font-size: 1em;
+		font-size: 3vh;
 	}
 	.text-box h3 {
-		font-size: .9em;
+		font-size: 121%;
 		font-weight: 700;
 	}
 	.text-box p {
-		font-size: .7em;
+		font-size: 90%;
 	}
 }
 
 /* medium screen */
-@media screen and (min-width: 361px) and (max-width: 500px) {
+@media screen and (min-width: 361px) and (max-width: 400px) {
 	.slider-caption {
 		bottom: -2.5em;
 	}
@@ -842,23 +855,19 @@ span.icon-bar {
 		font-size: 1.2em;
 	}
 	.our-title {
-		font-size: 1.4em;
+		font-size: 3vh;
 	}
 	.text-box h3 {
-		font-size: .9em;
+		font-size: 121%;
 		font-weight: 700;
-		margin-top: 5px;
 	}
 	.text-box p {
-		font-size: .7em;
-	}
-	.text-box span.medium-screen {
-		margin-top: 5px;
+		font-size: 69%;
 	}
 }
 
 /* large screen */
-@media screen and (min-width: 501px) and (max-width: 600px) {
+@media screen and (min-width: 400px) and (max-width: 600px) {
 	.slider-caption {
 		bottom: -2.5em;
 	}
@@ -872,22 +881,49 @@ span.icon-bar {
 		font-size: 1.2em;
 	}
 	.our-title {
-		font-size: 1.9em;
+		font-size: 3.5vh;
 	}
 	.text-box h3 {
-		font-size: 1em;
+		font-size: 121%;
 		font-weight: 700;
-		margin-top: 5px;
 	}
 	.text-box p {
-		font-size: .8em;
+		font-size: 78%;
 	}
 }
 
 /* extra large screen */
-@media screen and (min-width: 600px) {
-	.small-screen, .medium-screen, .large-screen, .extra-large-screen {
-		display: inline-block;
+@media screen and (min-width: 601px) and (max-width: 1020px) {
+	.red-bar a {
+		font-size: 1.2em;
+	}
+	.our-title {
+		font-size: 4vh;
+	}
+	.text-box h3 {
+		font-size: 150%;
+		font-weight: 700;
+	}
+	.text-box p {
+		font-size: 93%;
+	}
+}
+
+/* desktop */
+@media screen and (min-width: 1021px) {
+	.our-text {
+		overflow-y: auto;
+		background: #e4e9f5;
+	}
+	.our-title {
+		font-size: 8vh;
+	}
+	.text-box h3 {
+		font-size: 4vmin;
+		font-weight: 700;
+	}
+	.text-box p {
+		font-size: 2.3vmin;
 	}
 }
 
