for large screens added image as background

--- a/wp-content/themes/texsite/sass/site/header/_header.scss
+++ b/wp-content/themes/texsite/sass/site/header/_header.scss
@@ -67,7 +67,7 @@
     }
   }
   .desktop {
-    @media screen and (min-width: 1025px) {
+    @media screen and (min-width: 1024px) {
       display: inline-block;
       width: 100%;
     }
@@ -204,27 +204,59 @@
       font-weight: 700;
     }
     p {
-      font-size: 93%;
+      font-size: 92%;
     }
   }
 }
 /* desktop */
-@media screen and (min-width: 1021px) {
+@media screen and (min-width: 1021px) and (max-width: 1199px) {
   .our-text {
     overflow-y: auto;
     background: #e4e9f5;
+    background-image: url("./images/ourstory.png");
+    min-height: 500px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
   }
 
   .our-title {
-    font-size: 8vh;
+    font-size: 4em;
   }
   .text-box {
+    padding-left: 4vh;
     h3 {
-      font-size: 4vmin;
+      font-size: 2.5em;
       font-weight: 700;
     }
     p {
-      font-size: 2.3vmin;
+      font-size: 20px;
+    }
+  }
+}
+/* large screen bootstrap */
+@media screen and (min-width: 1200px) {
+  .our-text {
+    overflow-y: auto;
+    background: #e4e9f5;
+    background-image: url("./images/ourstory.png");
+    min-height: 500px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+  }
+
+  .our-title {
+    font-size: 4em;
+  }
+  .text-box {
+    padding-left: 4vh;
+    h3 {
+      font-size: 2.5em;
+      font-weight: 700;
+    }
+    p {
+      font-size: 20px;
     }
   }
 }
