--- a/wp-content/themes/texsite/sass/site/header/_header.scss
+++ b/wp-content/themes/texsite/sass/site/header/_header.scss
@@ -213,7 +213,7 @@
   .our-text {
     overflow-y: auto;
     background: #e4e9f5;
-    background-image: url("./images/ourstory.png");
+    background-image: url("./images/ourStory.png");
     min-height: 500px;
     background-size: cover;
     background-repeat: no-repeat;
@@ -239,7 +239,7 @@
   .our-text {
     overflow-y: auto;
     background: #e4e9f5;
-    background-image: url("./images/ourstory.png");
+    background-image: url("./images/ourStory.png");
     min-height: 500px;
     background-size: cover;
     background-repeat: no-repeat;
