getting ready to upload to hosting

--- a/wp-content/themes/texsite/sass/site/_site.scss
+++ b/wp-content/themes/texsite/sass/site/_site.scss
@@ -55,3 +55,8 @@
 ## texnation page
 --------------------------------------------------------------*/
 @import "texNation/texNation";
+
+/*--------------------------------------------------------------
+## contact us page
+--------------------------------------------------------------*/
+@import "contact/contact";
