--- a/wp-content/themes/texsite/sass/style.scss
+++ b/wp-content/themes/texsite/sass/style.scss
@@ -1,19 +1,19 @@
 /*!
-Theme Name: Texsite
-Theme URI: http://underscores.me/
-Author: roman
+Theme Name: Texadelphia 2017
+Theme URI: https://www.texadelphia.com
+Author: roman brito
 Author URI: http://romanbrito.pro
-Description: texsite theme
+Description: Texadelphia site
 Version: 1.0.0
 License: GNU General Public License v2 or later
 License URI: LICENSE
-Text Domain: texsite
-Tags: custom-background, custom-logo, custom-menu, featured-images, threaded-comments, translation-ready
+Text Domain: texadelphia
+Tags: custom texadelphia site with locations, menu, contact, franchising, etc
 
 This theme, like WordPress, is licensed under the GPL.
 Use it to make something cool, have fun, and share what you've learned with others.
 
-Texsite is based on Underscores http://underscores.me/, (C) 2012-2016 Automattic, Inc.
+Texadelphia 2017 is based on Underscores http://underscores.me/, (C) 2012-2016 Automattic, Inc.
 Underscores is distributed under the terms of the GNU GPL v2 or later.
 
 Normalizing styles have been helped along thanks to the fine work of
