some format to forms contact

--- a/wp-content/themes/texsiteO/sass/site/contact/_contact.scss
+++ b/wp-content/themes/texsiteO/sass/site/contact/_contact.scss
@@ -8,4 +8,14 @@
   p.feed-text {
     padding-top: 1em;
   }
+  margin-top: 2em;
+}
+
+select#input_1_3_3 {
+  font-size: .8em;
+}
+
+#input_1_1,#input_1_2,#input_1_3_1,#input_1_3_2,#input_1_3_3,#input_1_4_3, #input_1_4_6,#input_1_6,#input_1_5,#input_1_7,
+#input_2_1_3,#input_2_1_6,#input_2_2,#input_2_3,#input_2_4_3,#input_2_4_4,#input_2_4_5,#input_2_4_6,#input_2_5 {
+  border-radius: 4px;
 }
