--- a/wp-content/themes/texsiteO/style.css
+++ b/wp-content/themes/texsiteO/style.css
@@ -1588,6 +1588,10 @@ ul {
 /*--------------------------------------------------------------
 ## contact us page
 --------------------------------------------------------------*/
+.contact-us {
+	margin-top: 2em;
+}
+
 .contact-us a {
 	color: #337ab7;
 }
@@ -1598,6 +1602,15 @@ ul {
 
 .contact-us p.feed-text {
 	padding-top: 1em;
+}
+
+select#input_1_3_3 {
+	font-size: .8em;
+}
+
+#input_1_1, #input_1_2, #input_1_3_1, #input_1_3_2, #input_1_3_3, #input_1_4_3, #input_1_4_6, #input_1_6, #input_1_5, #input_1_7,
+#input_2_1_3, #input_2_1_6, #input_2_2, #input_2_3, #input_2_4_3, #input_2_4_4, #input_2_4_5, #input_2_4_6, #input_2_5 {
+	border-radius: 4px;
 }
 
 /*--------------------------------------------------------------
