--- a/wp-content/themes/texsite/sass/site/_site.scss
+++ b/wp-content/themes/texsite/sass/site/_site.scss
@@ -60,3 +60,8 @@
 ## contact us page
 --------------------------------------------------------------*/
 @import "contact/contact";
+
+/*--------------------------------------------------------------
+## contact us page
+--------------------------------------------------------------*/
+@import "news/news";
